real_data: trio analysis

--- a/real_data_analysis/reproducibility_PBMC.ipynb
+++ b/real_data_analysis/reproducibility_PBMC.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fbcc710d-e239-4d0e-a730-47c9b6c3e939",
+   "metadata": {},
+   "source": [
+    "Codes for making Figure 2a in the manuscript."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cac16549-0c49-4a3d-a418-b7ac17865f05",
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "4e979b52-9f80-4868-8ff1-05e51c652bd8",
    "metadata": {},
    "outputs": [],
@@ -62,13 +70,16 @@
     "#for(dpair in list(c(1,2),c(1,3))){\n",
     "    res_list <- list()\n",
     "    res_list[['proposed']] <- load_proposed(ct, datasets = datasets,\n",
-    "                                       fn_suffix = fn_suffix['proposed']) \n",
+    "                                       fn_suffix = fn_suffix['proposed'],\n",
+    "                                           output_dir = output_dir) \n",
     "    res_list[['Signac']] <- load_Signac(ct, datasets = datasets,\n",
-    "                                       fn_suffix = fn_suffix['Signac']) \n",
+    "                                       fn_suffix = fn_suffix['Signac'],\n",
+    "                                           output_dir = output_dir) \n",
     "    res_list[['SCENT']] <- load_SCENT(ct, \n",
     "                                  n_sets = 10,\n",
     "                                  datasets = datasets,\n",
-    "                                  fn_suffix = fn_suffix['SCENT']) \n",
+    "                                  fn_suffix = fn_suffix['SCENT'],\n",
+    "                                           output_dir = output_dir) \n",
     "\n",
     "    sum_list <- list()\n",
     "    for(nc in 1:length(p_cutoffs)){\n",
@@ -81,11 +92,8 @@
     "        for(i in 1:length(comb_list)){\n",
     "            for(method in methods){\n",
     "                tmp <- get_overlap(res_list[[method]][comb_list[[i]]],\n",
-    "                                   #n_cutoff=n_cutoffs[nc]\n",
-    "                                   #p_var='pval', p_cutoff=0.05\n",
-    "                                   #n_cutoff = 5000\n",
-    "                               p_var = 'adj_pval', p_cutoff = p_cutoffs[nc]\n",
-    "                                      )\n",
+    "                                   p_var = 'adj_pval', \n",
+    "                                   p_cutoff = p_cutoffs[nc])\n",
     "                pval_vec <- c(pval_vec, tmp$log_p_val)\n",
     "                fc_vec <- c(fc_vec, tmp$fc)\n",
     "                power_d1 <- c(power_d1, tmp$counts[[2]][1]/tmp$counts[[3]])\n",
@@ -157,13 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6047333b-a7ea-4727-817e-5814cdfb4fa5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# readRDS('../../analysis/real_data/output/manuscript/PBMC/reproducibility.rds')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -175,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1652c843-2f8e-4b30-bc9a-a2f62002ebcf",
    "metadata": {},
    "outputs": [],
@@ -192,13 +198,10 @@
     "        t <- 1\n",
     "        for(i in 1:length(comb_list)){\n",
     "           # for(method in methods){\n",
-    "            GBM_res <- load_GBM(ct, datasets = datasets[comb_list[[i]]], method_par = qu_cutoffs[nc])\n",
+    "            GBM_res <- load_GBM(ct, datasets = datasets[comb_list[[i]]], method_par = qu_cutoffs[nc],\n",
+    "                                output_dir = output_dir)\n",
     "                tmp <- get_overlap(GBM_res,\n",
-    "                                   #n_cutoff=n_cutoffs[nc]\n",
-    "                                   p_var='pval', p_cutoff=0.05\n",
-    "                                   #n_cutoff = 5000\n",
-    "                               #p_var = 'adj_pval', p_cutoff = p_cutoffs[nc]\n",
-    "                                      )\n",
+    "                                   p_var='pval', p_cutoff=0.05)\n",
     "                pval_vec <- c(pval_vec, tmp$log_p_val)\n",
     "                fc_vec <- c(fc_vec, tmp$fc)\n",
     "                power_d1 <- c(power_d1, tmp$counts[[2]][1]/tmp$counts[[3]])\n",
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "4eeb7496-e316-4a9d-9703-6ee1096cac8e",
    "metadata": {},
    "outputs": [
@@ -314,7 +317,7 @@
     "                              paste(toupper(substr(replicate, 1, 1)), \n",
     "                                    substr(replicate, 2, nchar(replicate)), sep=\"\")), \n",
     "                      gp=gpar(fontsize=22), x = 0, hjust = 0))\n",
-    "    ggsave(sprintf('%s/PBMC/reproducibility_GBM_%s.pdf', fig_dir, replicate), g, width = 6, height = 4)\n",
+    "   # ggsave(sprintf('%s/PBMC/reproducibility_GBM_%s.pdf', fig_dir, replicate), g, width = 6, height = 4)\n",
     "}"
    ]
   },
