--- a/real_data_analysis/reproducibility_brain.ipynb
+++ b/real_data_analysis/reproducibility_brain.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2bc8c4cd-d98f-49b6-bdb6-d1ab7f955175",
+   "metadata": {},
+   "source": [
+    "Codes for making Figure 4d-e in the manuscript."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "72cdb3b2-3164-44ab-9036-dbc2a711dada",
@@ -61,14 +69,16 @@
     "for(i_ct in 1:5){\n",
     "    res_list <- list()\n",
     "    res_list[['proposed']] <- load_proposed(ct_list[[i_ct]], datasets = datasets,\n",
-    "                                       fn_suffix = fn_suffix['proposed']) \n",
+    "                                           fn_suffix = fn_suffix['proposed'],\n",
+    "                                           output_dir = output_dir) \n",
     "    res_list[['Signac']] <- load_Signac(ct_list[[i_ct]], datasets = datasets,\n",
-    "                                       fn_suffix = fn_suffix['Signac']) \n",
+    "                                       fn_suffix = fn_suffix['Signac'],\n",
+    "                                       output_dir = output_dir) \n",
     "    res_list[['SCENT']] <- load_SCENT(ct_list[[i_ct]], \n",
     "                                  n_sets = ifelse(cts_CG[i_ct] %in% c('Microglia', 'Astrocytes'), 10, 20),\n",
-    "                                  # c(ifelse(i_ct==4,200,50),10), \n",
     "                                  datasets = datasets,\n",
-    "                                  fn_suffix = fn_suffix['SCENT']) \n",
+    "                                  fn_suffix = fn_suffix['SCENT'],\n",
+    "                                     output_dir = output_dir) \n",
     "\n",
     "    sum_list <- list()\n",
     "    for(nc in 1:length(p_cutoffs)){\n",
@@ -251,7 +261,8 @@
     "        results_list <- list()\n",
     "        t <- 1\n",
     "        for(i in 1:length(comb_list)){\n",
-    "            GBM_res <- load_GBM(ct_list[[i_ct]], datasets = datasets[comb_list[[i]]], method_par = qu_cutoffs[nc])\n",
+    "            GBM_res <- load_GBM(ct_list[[i_ct]], datasets = datasets[comb_list[[i]]], method_par = qu_cutoffs[nc],\n",
+    "                               output_dir = output_dir)\n",
     "            #for(method in methods){\n",
     "                tmp <- get_overlap(GBM_res,\n",
     "                                   #n_cutoff=n_cutoffs[nc]\n",
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "b53ad201-4c44-483f-9dd9-b19381ad7273",
    "metadata": {},
    "outputs": [
