First major update

--- a/real_data_analysis/reproducibility_PBMC.ipynb
+++ b/real_data_analysis/reproducibility_PBMC.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# saveRDS(long_ct_sum_df, sprintf('%s/manuscript/PBMC/reproducibility.rds', output_dir))"
+    "saveRDS(long_ct_sum_df, sprintf('%s/PBMC_reproducibility.rds', output_dir))"
    ]
   },
   {
