--- a/real_data_analysis/validation_PBMC.ipynb
+++ b/real_data_analysis/validation_PBMC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "84f12d51-9cc8-4080-bbbd-b18e7897e57f",
    "metadata": {},
    "outputs": [],
@@ -22,19 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "230d96c3-6f34-4e03-a67f-c61320c921f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir <- '/projects/chang/scGRN/analysis/real_data'\n",
-    "output_dir <- '/projects/chang/scGRN/analysis/real_data/output'\n",
+    "output_dir <- 'e'\n",
     "fig_dir <- '/projects/chang/scGRN/analysis/manuscript/figures'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "33d0e3d7-7c7a-45b2-a717-41d29b10a167",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e1d1c390-e5ca-4672-aff2-87ef6702a502",
    "metadata": {},
    "outputs": [],
@@ -46,12 +54,15 @@
     "\n",
     "res_list_ct <- list()\n",
     "res_list_ct[['proposed']] <- load_proposed(ct, datasets = datasets,\n",
-    "                                           fn_suffix = '_batch_adjusted')\n",
+    "                                           fn_suffix = '_batch_adjusted',\n",
+    "                                           output_dir = output_dir)\n",
     "res_list_ct[['SCENT']] <- load_SCENT(ct, n_sets=10,\n",
     "                                     datasets = datasets,\n",
-    "                                     fn_suffix = '_batch_as_covar_adjusted_n_bootstrap_5000') \n",
+    "                                     fn_suffix = '_batch_as_covar_adjusted_n_bootstrap_5000',\n",
+    "                                     output_dir = output_dir) \n",
     "res_list_ct[['Signac']] <- load_Signac(ct, datasets = datasets,\n",
-    "                                       fn_suffix = '_permu_adjusted')\n",
+    "                                       fn_suffix = '_permu_adjusted',\n",
+    "                                      output_dir = output_dir)\n",
     "\n",
     "res_list <- list()\n",
     "res_list[[ct]] <- res_list_ct"
@@ -175,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveRDS(sum_df_PCHiC, sprintf('%s/manuscript/PBMC/PCHiC.rds', output_dir))"
+    "saveRDS(sum_df_PCHiC, sprintf('%s/results/PBMC_PCHiC.rds', output_dir))"
    ]
   },
   {
@@ -192,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "997af833-50a7-4cc9-8eaf-92959a002533",
    "metadata": {},
    "outputs": [],
@@ -290,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveRDS(sum_df_HiChIP, sprintf('%s/manuscript/PBMC/HiChIP.rds', output_dir))"
+    "saveRDS(sum_df_HiChIP, sprintf('%s/results/PBMC_HiChIP.rds', output_dir))"
    ]
   },
   {
@@ -412,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveRDS(sum_df_eQTL, sprintf('%s/manuscript/PBMC/eQTL.rds', output_dir))"
+    "saveRDS(sum_df_eQTL, sprintf('%s/results/PBMC_eQTL.rds', output_dir))"
    ]
   },
   {
