Update color panel and save source data

--- a/real_data_analysis/reproducibility_PBMC.ipynb
+++ b/real_data_analysis/reproducibility_PBMC.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "4eeb7496-e316-4a9d-9703-6ee1096cac8e",
    "metadata": {},
    "outputs": [
@@ -318,6 +318,8 @@
     "                                    substr(replicate, 2, nchar(replicate)), sep=\"\")), \n",
     "                      gp=gpar(fontsize=22), x = 0, hjust = 0))\n",
     "   # ggsave(sprintf('%s/PBMC/reproducibility_GBM_%s.pdf', fig_dir, replicate), g, width = 6, height = 4)\n",
+    "    saveRDS(list(scMultiMap = proposed_df, SCENIC = tmp), \n",
+    "            sprintf('../manuscript/Source Data/supplementary/figure_4%s.rds', fig_letter[replicate]))\n",
     "}"
    ]
   },
@@ -325,6 +327,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70179777-bcb4-4b1f-9a22-dc6f0ef0a719",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fb92cf1-c696-484a-8c30-60ce2100b49d",
    "metadata": {},
    "outputs": [],
    "source": []
