--- a/real_data_analysis/trio_brain.ipynb
+++ b/real_data_analysis/trio_brain.ipynb
@@ -174,11 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "39edc5e3-ec84-4df5-9670-b58d5d068375",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "write.table(int_enr_sum, '../manuscript/Source Data/main/figure_3f.txt')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5080be5a-066f-4ec8-8578-ed8918117f18",
    "metadata": {},
    "outputs": [],
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "394b38d1-388b-4874-8afa-25419ebda479",
    "metadata": {},
    "outputs": [],
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4ae5b28a-341f-4e0b-a1f4-eb9465c1d103",
    "metadata": {},
    "outputs": [
@@ -279,6 +281,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b1d0d0f4-9836-4faa-b525-f14ad06181bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(int_enr_sum, '../manuscript/Source Data/main/figure_3g.txt')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d6e6d932-94d3-4272-890b-7b9bd12ba9c8",
    "metadata": {},
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "771938a3-d5f6-49df-8298-ee346aa8968c",
    "metadata": {},
    "outputs": [],
@@ -315,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f009b0ad-bda1-4095-b30d-ec0c034e8e0d",
    "metadata": {},
    "outputs": [
@@ -465,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "3185b0ce-90d5-418c-a9f8-e41df97b6653",
    "metadata": {},
    "outputs": [
@@ -507,6 +519,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eb80a322-29d1-4d19-b884-c47c5fbb0d86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(int_enr_sum, '../manuscript/Source Data/supplementary/figure_13c.txt')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "41c2fe2a-6ffb-4ee5-814f-781b537fa244",
    "metadata": {},
@@ -516,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "de33b5d2-155b-4b7e-97b2-5fb3a0df634a",
    "metadata": {},
    "outputs": [],
@@ -535,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "c15846bb-fc9e-45b2-8f8b-9289d41f6abb",
    "metadata": {},
    "outputs": [],
@@ -552,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "b85e2365-054f-402c-83f2-a6dc2863257d",
    "metadata": {},
    "outputs": [
@@ -595,6 +617,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "50d02b91-9992-45c5-a7c9-d0d08b363b3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(int_enr_sum, '../manuscript/Source Data/supplementary/figure_13a.txt')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3b7016f1-10a5-4d49-9c7d-d37542c170cf",
    "metadata": {},
@@ -604,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ea353431-0a38-43c3-a4a9-2857c282ced4",
    "metadata": {},
    "outputs": [],
@@ -623,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "98f05084-dc32-40e6-a9b8-0dbbd94e6957",
    "metadata": {},
    "outputs": [],
@@ -642,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "dcbda3d2-3711-41f4-b34b-6a517db5ffb0",
    "metadata": {},
    "outputs": [
@@ -679,6 +711,16 @@
     "              fontsize = 15,\n",
     "              border_color  = NA, cellwidth=23)\n",
     "ggsave(sprintf('%s/trio/%s_2000.pdf', fig_dir, ct), g, width = 6 * repr.plot.ratio, height = 4 * repr.plot.ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6f68d5c2-9049-43bc-91b8-14a6ec7a7d60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(int_enr_sum, '../manuscript/Source Data/supplementary/figure_13b.txt')"
    ]
   }
  ],
