--- a/real_data_analysis/validation_PBMC.ipynb
+++ b/real_data_analysis/validation_PBMC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "84f12d51-9cc8-4080-bbbd-b18e7897e57f",
    "metadata": {},
    "outputs": [],
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "230d96c3-6f34-4e03-a67f-c61320c921f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir <- '/projects/chang/scGRN/analysis/real_data'\n",
-    "output_dir <- 'e'\n",
+    "output_dir <- '/projects/chang/scGRN/analysis/real_data/output'\n",
     "fig_dir <- '/projects/chang/scGRN/analysis/manuscript/figures'"
    ]
   },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "e1d1c390-e5ca-4672-aff2-87ef6702a502",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a2bd08be-e380-43b9-bdf1-a5d4b8c361c1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "6aa20b6f-8a64-430f-9ac9-622733095b62",
    "metadata": {},
    "outputs": [
@@ -181,12 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "7779e01c-319a-4417-ab91-31dc752a5848",
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveRDS(sum_df_PCHiC, sprintf('%s/results/PBMC_PCHiC.rds', output_dir))"
+    "#saveRDS(sum_df_PCHiC, sprintf('%s/results/PBMC_PCHiC.rds', output_dir))"
    ]
   },
   {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "997af833-50a7-4cc9-8eaf-92959a002533",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "d912b67e-04e6-451a-a260-87620d729b51",
    "metadata": {},
    "outputs": [
@@ -296,12 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "db2f72a5-d438-40cd-9019-5b4f14283cba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveRDS(sum_df_HiChIP, sprintf('%s/results/PBMC_HiChIP.rds', output_dir))"
+    "#saveRDS(sum_df_HiChIP, sprintf('%s/results/PBMC_HiChIP.rds', output_dir))"
    ]
   },
   {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "21c0d6eb-7a0b-45cc-a0f1-be7c440e5865",
    "metadata": {},
    "outputs": [
@@ -418,12 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f01cfe1b-6439-430b-8392-1f290b2078db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "saveRDS(sum_df_eQTL, sprintf('%s/results/PBMC_eQTL.rds', output_dir))"
+    "#saveRDS(sum_df_eQTL, sprintf('%s/results/PBMC_eQTL.rds', output_dir))"
    ]
   },
   {
@@ -436,14 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "ba46d6fc-2120-4471-91dd-68c07ea52dcb",
    "metadata": {},
    "outputs": [],
    "source": [
     "res_list_ct <- list()\n",
     "for(qu in c(0.85,0.9,0.95)){\n",
-    "    res_list_ct[[sprintf('quantile_%.2f', qu)]] <- load_GBM(ct, datasets = datasets, method_par = qu)\n",
+    "    res_list_ct[[sprintf('quantile_%.2f', qu)]] <- load_GBM(ct, datasets = datasets, method_par = qu, output_dir = output_dir)\n",
     "}\n",
     "res_list <- list()\n",
     "res_list[[ct]] <- res_list_ct"
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "f3ca9940-d836-4944-9805-e5118d5f04a3",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "a149fa2e-a1ed-4c9a-ac6c-a9fefe3d67e9",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "2ed10f7a-26ea-4846-8868-67e190942444",
    "metadata": {},
    "outputs": [
@@ -576,6 +576,7 @@
     "                           regular_df_list[[adata]]$enr[regular_df_list[[adata]]$method == 'scMultiMap']+0.1)) +\n",
     "    theme_classic(base_size = 20) \n",
     "    print(g_list[[adata]])\n",
+    "    write.table(df, sprintf('../../scMultiMap_analysis/manuscript/Source Data/supplementary/figure_6%s.txt', fig_letter[adata]))\n",
     "}"
    ]
   },
